Fixing home cities box overflow

--- a/app/assets/stylesheets/index.sass
+++ b/app/assets/stylesheets/index.sass
@@ -7,7 +7,9 @@
     position: fixed
     top: 170px
     width: 410px
-    min-height: 590px
+    height: 480px
+    overflow-x: hidden
+    overflow-y: scroll
     padding: 30px 0 10px 0
     left: 20px
     z-index: 1000
